# edh-testbench

./: .gitignore  LICENSE  LIMITATIONS.md  README.md  REPORT.md  activate.sh  preregistration.yaml  pyproject.toml  requirements.txt
edh/: __init__.py  ais.py  entropy.py  finite_size.py  pid.py  report.py  stats.py  track_a_signaling.py  track_b_proto_dialogue.py
experiments/: exp_ais_retro.py  exp_p1_calibrate_lambda.py  exp_p1_decompose_cost.py  exp_p1_regimes.py  exp_p1_scaling.py  exp_p1_scaling_pairwise.py  exp_p2_beta_robustness.py  exp_p2_rg.py  exp_p2_rg_plastic.py  exp_p2_synergy_onset.py  exp_p3_entropy_crossover.py  exp_robustness_trackb.py  make_paper_figures.py  run_all.py
paper_figures/: MANIFEST.txt
reference/: PROTOCOL.md  dynamics_stochastic.py  pid_fast.py
results/ais/: ais_profile.csv  ais_universality.json
results/calibration/: chosen_lambda.json  lambda_calibration.csv
results/calibration_pairwise/: chosen_lambda.json  lambda_calibration.csv
results/diagnostics/: cost_decomposition.csv  cost_decomposition.json
results/p2_rg/: verdict.json
results/p2_rg_plastic/: beta_robustness.json  verdict.json
results/p2_synergy_onset/: deltas.csv  verdict.json
results/p3_entropy_crossover/: crossover.csv  verdict.json
results/q_sweep_linear/: regime_verdict.json  sweep.csv  verdict.json
results/q_sweep_pairwise/: sweep.csv  verdict.json
tests/: conftest.py  test_ais.py  test_calibration_logic.py  test_determinism.py  test_entropy.py  test_no_hardcoded_cost.py  test_pid_gates.py  test_track_b.py
(+2 files in other folders)
